<resources>
    <string name="app_name">Mery</string>

    <string name="login_text">로그인</string>
    <string name="kakao_login_text">카카오 로그인</string>
    <string name="login_guide_text">간편하게 로그인해서 메리를 시작해보세요</string>

    <string name="kakao_login_failed">카카오 로그인 실패</string>
    <string name="other_error">기타 에러</string>
    <string name="invalid_error">유효하지 않은 앱</string>
    <string name="access_denied">접근이 거부 됨(동의 취소)</string>
    <string name="request_parameter_error">요청 파라미터 오류</string>
    <string name="can_not_authentication">인증 수단이 유효하지 않아 인증할 수 없는 상태</string>
    <string name="invalid_scope_id">유효하지 않은 scope ID</string>
    <string name="setting_not_right">설정이 올바르지 않음(android key hash)</string>
    <string name="server_internal_error">서버 내부 에러</string>
    <string name="not_have_request_permission">앱이 요청 권한이 없음</string>

    <string name="all_ok">확인</string>
    <string name="all_cancel">취소</string>
    <string name="all_complete">완료</string>
    <string name="all_next">다음</string>

    <string name="signup_title">가입하기</string>

    <string name="qna_title">우리의 문답</string>
    <string name="qna_answer_label_format">%s님의 대답</string>
    <string name="qna_request_answer_message_format">%s님의 답변을 확인해보려면 나의 답변도 작성해주세요.</string>
    <string name="qna_write_answer_button">작성하기 ></string>
    <string name="qna_unconnected_answer_label">상대방의 대답</string>
    <string name="qna_unconnected_answer_description">상대방과 연결되어 있지 않아요. 연결되면 우리만의 문답을 함께 작성해갈 수 있어요.</string>
    <string name="qna_fiance_answer_waiting_description">상대방의 답변을 기다리고 있어요. 답변이 작성되면 푸쉬 알림으로 알려드릴게요.</string>
    <string name="qna_fiance_answer_locked_description">잠겨있어요!</string>
    <string name="qna_connect_button">연결하기 ></string>
    <string name="qna_responses_label">우리의 반응</string>
    <string name="qna_response_description">둘 다 답변을 작성하면 우리만의 반응을 추가할 수 있어요.</string>
    <string name="qna_good_response_label">좋아요</string>
    <string name="qna_better_know_response_label">더 잘 알게 됐어요</string>
    <string name="qna_lets_talk_response_label">대화해봐요</string>
    <string name="qna_lets_find_response_label">더 찾아봐요</string>
    <string name="qna_waiting_response_label">기다리고 있어요</string>
    <string name="qna_locked_response_label">잠겨있어요</string>
    <string name="qna_doing_well_response_result_label">잘하고 있어요</string>
    <string name="qna_more_talk_response_result_label">이야기를 나눠보세요</string>
    <string name="qna_more_find_response_result_label">더 자세히 알아보세요</string>
    <string name="qna_response_select_dialog_close_button_description">반응 선택 다이얼로그 닫기 버튼</string>
    <string name="qna_response_select_dialog_title">반응 선택하기</string>
    <string name="qna_response_select_dialog_description">서로의 답변을 확인했나요?\n우리의 문답에 나의 반응을 추가해보세요.</string>
    <string name="qna_response_select_dialog_good_button_description">좋아요 선택 버튼</string>
    <string name="qna_response_select_dialog_better_know_button_description">더 잘 알게 됐어요 선택 버튼</string>
    <string name="qna_response_select_dialog_lets_talk_button_description">대화해봐요 선택 버튼</string>
    <string name="qna_response_select_dialog_lets_find_button_description">더 찾아봐요 선택 버튼</string>

    <string name="connect_title">상대방과 연결 관리</string>

    <string name="writeanswer_title">답변 작성하기</string>

    <string name="webview_terms_of_use">서비스 이용약관</string>
    <string name="webview_privacy_policy">개인정보 처리방침</string>
    <string name="webview_sensitive_privacy">민감정보 수집 동의</string>
    <string name="webview_question_factory">질문 제작소</string>
    <string name="webview_cs_center">고객센터</string>

    <string name="select_signup_type">가입 유형을 선택해주세요.</string>
    <string name="select_signup_type_detail">메리는 예비부부를 위한 결혼문답 앱이에요.\n예비신랑인지 예비신부인지 선택해주세요.</string>
    <string name="groom">예비신랑</string>
    <string name="bride">예비신부</string>
    <string name="groom_explain">결혼을 준비하는 예비신랑이에요.</string>
    <string name="bride_explain">결혼을 준비하는 예비신부예요.</string>

    <string name="createqna_category_title">카테고리 선택하기</string>
    <string name="createqna_recommend_question_title">오늘의 추천 질문</string>

    <string name="marry_date_guide_text">결혼예정일을 알려주세요.</string>
    <string name="marry_date_guide_detail_text">결혼까지 남은 기간에 따라 문답을 추천해드릴게요.\n정확한 예정일이 없다면 대략적으로 선택해주세요.</string>

    <string name="category_login_tag"><![CDATA[로그인하기>]]></string>
    <string name="category_ment">지금 로그인하면 메리의 200개가 넘는\n모든 질문들을 확인수 있어요!</string>
    <string name="category_finance">경제</string>
    <string name="category_communication">소통</string>
    <string name="category_values">가치관</string>
    <string name="category_lifestyle">생활</string>
    <string name="category_children">자녀</string>
    <string name="category_family">가족</string>
    <string name="category_sex">부부관계</string>
    <string name="category_health">건강</string>
    <string name="category_wedding">결혼식</string>
    <string name="category_future">미래</string>
    <string name="category_present">현재</string>
    <string name="category_past">과거</string>

    <string name="profilemenu_user_setting_label">내 계정 관리</string>
    <string name="profilemenu_request_login_message">로그인해주세요</string>
    <string name="profilemenu_profile_update_button">내 정보 수정하기</string>
    <string name="profilemenu_connect_setting_button">상대방과 연결관리</string>
    <string name="profilemenu_service_info_label">서비스 이용 안내</string>
    <string name="profilemenu_question_factory_button">질문 제작소</string>
    <string name="profilemenu_customer_service_center_button">고객센터</string>
    <string name="profilemenu_terms_of_use_button">서비스 이용약관</string>
    <string name="profilemenu_privacy_policy">개인정보 처리방침</string>
    <string name="profilemenu_service_version_label">서비스 버전 정보</string>
    <string name="profilemenu_logout_button">로그아웃</string>
    <string name="profilemenu_leave_button">회원탈퇴</string>
    <string name="profilemenu_press_and_login_button">눌러서 로그인하기 ></string>
    <string name="profilemenu_press_and_connect">눌러서 연결하기 ></string>
    <string name="profilemenu_groom_name_format">%s님의 예비신부</string>
    <string name="profilemenu_bride_name_format">%s님의 예비신랑</string>
    <string name="profilemenu_request_login_for_marriage_date">지금 로그인하고 결혼 예정일을 설정해보세요.</string>
    <string name="profilemenu_until_marriage_date_format">결혼까지 %d일 남았어요.</string>
    <string name="profilemenu_congratulate_for_wedding">결혼을 축하드려요!</string>
    <string name="profilemenu_since_marriage_date_format">결혼한지 %d일 지났어요.</string>
    <string name="profilemenu_login_confirm_dialog_title">로그인이 필요한 서비스예요.</string>

</resources>
